fix text cutoff

--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -69,7 +69,7 @@ form {
 
     input {
       text-align: center;
-      width: 2vw;
+      width: 2.2vw;
       padding: 0.2vw;
       margin: 0 auto;
     }
